# Zero-Budget-Aspect-Based-Sentiment-Novelty-Shock-Return-Forecasting-Pipeline

./: LICENSE  data.duckdb  didwe.md  project.md  setup.py
abssent/etl/: __init__.py  edgar.py  news.py  prices.py
abssent/nlp/: sentiment.py
abssent/utils/: io.py
chweb/: README.md  example.py  pyproject.toml  requirements.txt
chweb/abssent/: __init__.py  cli.py
chweb/abssent/nlp/: __init__.py  aspects.py  novelty.py
chweb/abssent/utils/: __init__.py  config.py  logging.py
chweb/processed/: expanded_aspect_lexicon.json
